# secend-monitor-sds

./: 123.pyw  Cargo.toml
src/: admin.html  capture.rs  config.rs  cursor.rs  framehub.rs  http.rs  index.html  jpeg.rs  main.rs  mdns.rs  pipeline.rs  tray.rs  web.rs  winutil.rs
