[package]
name = "sspd-rs"
version = "0.1.0"
edition = "2021"
description = "Spacedesk-style LAN second-monitor streaming server (Rust port)"

[dependencies]
# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image / JPEG encoding (pure Rust, no native deps)
jpeg-encoder = "0.6"

# mDNS / LAN discovery (pure Rust)
mdns-sd = "0.11"

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"
once_cell = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "wingdi",
    "winnt",
    "shellapi",
    "winbase",
    "processthreadsapi",
    "libloaderapi",
    "dwmapi",
    "errhandlingapi",
    "handleapi",
    "shellscalingapi",
    "shobjidl",
    "combaseapi",
    "objbase",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
